tests/wpt/tests/third_party/test262/test/language/expressions/assignmenttargettype/direct-unaryexpression-delete-unaryexpression.js
// This file was procedurally generated from the following sources:
// - src/assignment-target-type/unaryexpression-delete-unaryexpression.case
// - src/assignment-target-type/invalid/direct.template
/*---
description: Static Semantics AssignmentTargetType, Return invalid (Direct assignment)
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    Direct assignment

    UnaryExpression: delete UnaryExpression
    Static Semantics AssignmentTargetType, Return invalid

---*/

$DONOTEVALUATE();

delete x.y = 1;
